Main Window Design/ clsSQL added
Added clsSQL as per the requirments.  Completed the initial design for the main window.

--- a/CS3280_Group14/CS3280_Group14.csproj
+++ b/CS3280_Group14/CS3280_Group14.csproj
@@ -57,6 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="Classes\clsDataAccess.cs" />
     <Compile Include="Classes\clsDBQueries.cs" />
+    <Compile Include="Classes\clsSQL.cs" />
     <Compile Include="Classes\clsInvoice.cs" />
     <Compile Include="Classes\clsItem.cs" />
     <Compile Include="Windows\wndEdit.xaml.cs">
